# vsdt-lab-work-6

./: CMakeLists.txt  README.md
include/: task1.h  task2.h  task3.h  task4.h
resources/: Task1.qml  Task2.qml  Task3.qml  Task4.qml  main.qml  resources.qrc
src/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp
